tests/errors/main.rs
mod error_tests;

mod capacity_error;
mod collection_error;
mod collision;
mod result_collection_error;
mod tuple_extension_error;
mod unzip_error;
